<resources>
    <string name="app_name">LatihanRakaminAplikasiSederhana</string>
    <string name="main_app_name">Latihan Rakamin Android</string>
    <string name="news_list">News List</string>
    <string name="news_list_bookmark">News List Bookmark</string>
    <string name="news_title">News Title</string>
    <string name="news_image">News Image</string>
    <string name="back_button">Back Button</string>
    <string name="share_button">Share Button</string>
    <string name="news_content_list">News Content</string>
    <string name="news_source">News Source</string>
    <string name="news_published_at">News Published At</string>
    <string name="news_description">News Description</string>
    <string name="news_author">News Author</string>
    <string name="about_me">About Me</string>
    <string name="about_me_name">Kelvin</string>
    <string name="about_me_email">yeskelvin1@gmail.com</string>
    <string name="about_me_github">JRSKelvin</string>
    <string name="copyright_developer">Copyright And Develop By Kelvin</string>
</resources>