<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageViewList"
            android:layout_width="55dp"
            android:layout_height="55dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/linearContentList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/circleImageViewList"
            app:layout_constraintEnd_toStartOf="@+id/buttonDeleteHomeTop"
            app:layout_constraintStart_toEndOf="@+id/circleImageViewList"
            app:layout_constraintTop_toTopOf="@+id/circleImageViewList">

            <TextView
                android:id="@+id/listItemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ellipsize="end"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/news_title" />

            <TextView
                android:id="@+id/listItemPublishAt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                tools:text="@string/news_published_at" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/buttonDeleteHomeTop"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="#00000000"
            android:contentDescription="@string/news_list_bookmark"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="@+id/linearContentList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearContentList"
            app:tint="@color/cardview_dark_background" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>